# troll

./: CMakeLists.txt  Test.pro  mainwindow.cc  mainwindow.h  mainwindow.ui
